# photo-processor

./: .cursorrules  .gitignore  .mcp.json  .prettierrc.json  CLAUDE.md  DEVELOPMENT_RULES.md  DEVELOPMENT_WORKFLOW.md  FIXES_APPLIED.md  HOT_FOLDER_TESTING.md  PROJECT_STATE.md  PROJECT_STATUS.md  README.md  RUNNING_THE_APP.md  SESSION_CHECKPOINT.md  SESSION_PROTOCOL.md  SESSION_UPDATE.md  SETUP_AND_TEST.md  TROUBLESHOOTING.md  fix-issues.sh  index.html  package-lock.json  package.json  requirements.txt  start-app.sh  start-backend.sh  start-dev.bat  start-dev.sh  tailwind.config.js  test-hotfolder.py  test_backend.py  test_pipeline_integration.py  test_preview_system.py  test_tauri_integration.md  verify_processing.py  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml  code-quality.yml  release.yml
python-backend/: main.py  preview_manager.py  queue_manager.py  requirements.txt  session_manager.py  test_pipeline.py  test_processors_simple.py
python-backend/pipeline/: __init__.py  base_processor.py  gpu_manager.py  memory_manager.py  pipeline_manager.py  processing_queue.py
python-backend/preview_cache/: cache_index.json
python-backend/processors/: __init__.py  base.py  brightness_processor.py  color_balance_processor.py  contrast_processor.py  exposure_processor.py  input_processor.py  quality_assessment_processor.py
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  hot_folder.rs  main.rs  pipeline.rs
src/components/: App.tsx  (+4 more)
(+18 files in other folders)
